feat: criado o equimentdto.